[tool.poetry]
name = "massive"
version = "0.0.0"
description = "Official Massive (formerly Polygon.io) REST and Websocket client."
authors = ["massive.com"]
license = "MIT"
homepage = "https://massive.com"
repository = "https://github.com/massive-com/client-python"
documentation = "https://massive.com/docs"
keywords = [
  "massive",
  "free",
  "rest",
  "stock",
  "market",
  "data",
  "api",
  "massive.com",
  "websocket",
  "client"
]
packages = [
  { include = "massive" }
]

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = ">=1.26.9"
websockets = ">=14.0"
certifi = ">=2022.5.18,<2026.0.0"

[tool.poetry.dev-dependencies]
black = "^25.9.0"
mypy = "^1.18"
types-urllib3 = "^1.26.25"
Sphinx = "^7.4.7"
sphinx-rtd-theme = "^3.0.2"
# keep this in sync with docs/requirements.txt for readthedocs.org
sphinx-autodoc-typehints = "^2.3.0"
types-certifi = "^2021.10.8"
types-setuptools = "^80.9.0"
pook = "^2.1.4"
orjson = "^3.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
